# gauss

./: README.md  config.py  example_config.toml  pyproject.toml
activelearning/: alclassification.py
activelearning/classification/: trainer.py
activelearning/qustrategies/: __init__.py
activelearning/qustrategies/classification/: albl.py  badge.py  batchbald.py  coreset.py  embeddingsampler.py  entropysampler.py  eventsampler.py  forgettingsampler.py  gmmss.py  idealgauss.py  lconfsampling.py  marginsampler.py  randomsampler.py  sampledswitchsampler.py  sampler.py  softmaxsampler.py  switchsampler.py
activelearning/qustrategies/utilities/: batchbald.py
data/datasets/classification/CIFAR10/: configuration.py
data/datasets/classification/CIFAR100/: configuration.py  dataset.py
data/datasets/classification/CIFAR10C/: configuration.py  dataset.py
data/datasets/classification/CINIC10/: configuration.py  dataset.py
data/datasets/classification/CURETSR/: configuration.py  dataset.py  utils.py
data/datasets/classification/MNIST/: configuration.py  dataset.py
data/datasets/classification/STL10/: configuration.py  dataset.py
data/datasets/classification/SVHN/: configuration.py  dataset.py
data/datasets/shared/: utils.py
models/: architectures.py
models/classification/: constants.py  mlp.py  resnet.py  torchmodels.py
stattracking/utils/: classificationtracker.py
training/classification/: classificationtracker.py  run.py  statregen.py  trainer.py
training/common/: saver.py  stattracker.py  summaries.py  trainutils.py
(+2 files in other folders)
