[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name= "gauss"
version = "3.1.1"
authors = ["Ryan Benkert <rbenkert3@gatech.edu>"]
description = "gauss"

[tool.poetry.dependencies]
python = "^3.8.0"
tqdm = "^4.31.1"
pandas = "^1.0.2"
torch = "^1.9.0"
torchvision = "^0.10.0"
tensorboardX = "^2.4.0"
matplotlib = "^3.4.2"
scipy = "^1.6.1"
toml = "^0.10.1"
scikit-image = "^0.18.1"
openpyxl = "^3.0.6"
toma = "^1.1.0"
scikit-learn = "^1.1.2"